$Id$

You are looking at a CVS snapshot of the REL_1_2 branch.

Version 1.1.7 (?? ??? 2007)
 - Fix bug [ 1828416 ] no pull-down entries for languages at 'preferences' and 'sys
 - Fix bug [ 1823080 ] CVS 1.1.7 - double sunday in month view
 - Applied PATCH [1826466 ] update to translations/Italian.txt
 - Applied PATCH [ 1813253 ] patch for upgrade-postgres.sql
 - Fixed problem with user-app-joomla.php when using https or single word names
 - Fix bug [ 1818796 ] DbCachedir readable by any WebCal installation
 - Fix bug [ 1819188 ] v1.1.6 SelectWeek problem
 - Fix bug [ 1819327 ] 1.1.6 Wrong "goto my calender" link, with own views
 - Fix bug [ 1806533 ] edit_entry still allows anyone to submit an entry
 - Fix bug [ 1811902 ] 1.1.6 - wrong highlight
 - Fix bug [ 1811891 ] 1.1.6 - repeating events (year) broken
 - Fix bug [ 1808020 ] Bugs in Webcalendar 1.1.6 in month view
 - Fix bug [ 1788481 ] Button Report is visible although not active in UAC
 - Fixed bug [ 1804895 ] Remote Calendars Breakage when using non-english
 - Fix bug [ 1808687 ] error relating to functions.php line 1990
 - Changed default installation user/password to root/none
 - Added read/write test to db_cache /tmp folder
 - Fix bug [ 1803715 ] Warnings from functions.php on repeating event
 - Patch 1798549: Updated French translation
 - Fix bug [ 1802380 ] Error in freebusy.php.

Version 1.1.6 (19 Sep 2007)
 - Patch 1791947: Handle the OPTIONS method in icalclient.php
   (Used by Evolution linux client.)
 - Fixed bug 1794658, 1795649: various files (upcoming.php, rss.php, etc.)
   were missing needed includes/formvars.php.
 - Patch 1792796: Debian fix for vulnerability CVE-2006-6669
   Fixes cross-site scripting (XSS) vulnerability in export_handler.php.

Version 1.1.5 (12 Sep 2007)
 - Security fix: vulnerability in $includeDir in functions.php
   Renamed getPredefinedVariables.php to formvars.php
 - Bug fix: [ 1780226 ] Repeat event monthly by position